--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 :root{
     --nero: #252525;
     --dimGray: #666;
@@ -54,7 +53,6 @@ h1, h2, h3, h4, h5, h6{
 .text{
     padding: 0.3rem 0;
     line-height: 1.7;
-    ma
 }
 .padding-y{
     padding: 6rem 0;
@@ -135,8 +133,7 @@ h1, h2, h3, h4, h5, h6{
     justify-content: space-between;
     padding: 0.6rem;
     border-bottom: 1.5px solid #f0f0f0;
-.brand-and-toggler h2
-}
+ }
 .navbar-brand{
     display: flex;
     align-items: center;
@@ -146,14 +143,11 @@ h1, h2, h3, h4, h5, h6{
 }
 .navbar-brand h2{
     padding-left: 0.4rem;
-    color: solid black;
     font-weight: 500;
     font-size: 20px;
     padding-top: 20px;
-    text-shadow: 10px solid black;
-
-    
 }
+
 #navbar-toggler{
     font-size: 1.65rem;
     padding: 0 0.3rem;
@@ -161,22 +155,27 @@ h1, h2, h3, h4, h5, h6{
     border: none;
     color:#A52A2A;
 }
+
 .navbar-nav{
     padding: 0.6rem 0;
 }
+
 .navbar-nav li{
     margin: 0.2rem 0;
     padding: 0.5rem 0;
 }
+
 .navbar-nav li a{
     font-weight: 400;
     text-transform: uppercase;
     font-size: 0.9rem;
     color: #A52A2A;
 }
+
 .navbar-nav li a:hover{
     color: var(--nero);
 }
+
 .navbar-collapse{
     display: none;
 }
@@ -199,14 +198,17 @@ h1, h2, h3, h4, h5, h6{
 .service{
     background-color: var(--snow);
 }
+
 .service-item{
     text-align: center;
     margin: 1.2rem 0;
     padding: 1.6rem 0;
 }
+
 .service-item span{
     font-size: 2.4rem;
 }
+
 .title span{
 
     width: 40px;
@@ -385,8 +387,8 @@ h1, h2, h3, h4, h5, h6{
     margin: 0 0.4rem;
     border-radius: 50%;
     cursor: pointer;
-
 }
+
 .contact-col-2 ul a{
     color: var(--max-red);
 
@@ -407,16 +409,16 @@ footer{
 
 
 @media screen and (min-width: 480px){
-    /* banner */
-    .banner-item h1{
-        font-size: 4rem;
-    }
-    .title h2{
-        font-size: 2rem;
-        letter-spacing: 3px;
-    }
+    
+.banner-item h1{
+    font-size: 4rem;
+}
+.title h2{
+    font-size: 2rem;
+    letter-spacing: 3px;
+}
 
-    .menu-item{
+.menu-item{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         align-items: center;
@@ -525,20 +527,19 @@ footer{
         grid-template-columns: repeat(4, 1fr);
     }
 
-    .contact-col-2{
+.contact-col-2{
         width: 75%;
         margin-left: auto;
         margin-right: auto;
-    }
+}
     
- video {
+video {
     margin-left: 20px;
+}
 
- }
-
- .text-video p {
+.text-video p {
     margin-left: 20px;
     font-family: var(--Kausan);
-    color: solid black;
-    font-size: 25px;
- }
+    color: black;
+   }
+}
